<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="48dip"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principale" >

    <Spinner
        android:id="@+id/sceltasegnala"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:entries="@array/destinazioni" />

    <EditText
        android:id="@+id/txtnome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nometesto" >
    </EditText>

    <EditText
        android:id="@+id/txtcognome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cognometesto" />
    
    <EditText
        android:id="@+id/txtora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/oratesto" />
    
    <EditText
        android:id="@+id/txtdata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/datatesto" />
    
    <EditText
        android:id="@+id/txtluogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/luogotesto" />


    <EditText
        android:id="@+id/txttesto"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.78"
        android:ems="10"
        android:hint="@string/segnalazionetesto"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/segnalainvia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:minHeight="10dip"
        android:onClick="onClick"
        android:text="@string/segnalainvia" />

</LinearLayout>