<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/marginigenerici"
    android:paddingLeft="@dimen/marginigenerici"
    android:paddingRight="@dimen/marginigenerici"
    android:paddingTop="@dimen/marginigenerici"
    tools:context=".Principale" >

    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
        
    	<ImageView
        	android:id="@+id/logo"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_margin="10dip"
        	android:contentDescription="@string/descrizionelogo"
        	android:src="@drawable/ic_launcher" />

    	<TextView
    	    android:id="@+id/infotesto1"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical"
    	    android:text="@string/info1"
    	    android:textSize="15sp" />
    	
    	<TextView
    	    android:id="@+id/infotesto2"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical"
    	    android:text="@string/info2"
    	    android:textSize="15sp" />
    	
	</LinearLayout>
</ScrollView>